--- a/main.css
+++ b/main.css
@@ -1,17 +1,11 @@
 main {
-  /* width: 800px; */
 }
 
 aside {
   background-color: blue;
-  /* width: 200px; */
 }
 
 .main-wrapper {
-  /*
-  display: flex;
-  justify-content: space-between;
-  */
   display: grid;
   grid-template-columns: 800px 1fr;
   grid-gap: 16px;
@@ -23,6 +17,7 @@ aside {
 }
 
 .cards .card {
+  background-color: red;
   border: 1px solid #ddd;
   width: 100px;
   height: 100px;
